// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxControls it should have green background when this section is chosen 1`] = `
<div
  style={
    Object {
      "background": "green",
      "color": "#313131",
      "cursor": "move",
      "fontSize": "11px",
      "height": "20px",
      "left": "-41px",
      "lineHeight": "20px",
      "position": "absolute",
      "textAlign": "center",
      "top": "0px",
      "width": "40px",
    }
  }
/>
`;

exports[`BoxControls it should not have green background when this section is not chosen 1`] = `
<div
  style={
    Object {
      "background": "#ccc",
      "color": "#313131",
      "cursor": "move",
      "fontSize": "11px",
      "height": "20px",
      "left": "-41px",
      "lineHeight": "20px",
      "position": "absolute",
      "textAlign": "center",
      "top": "0px",
      "width": "40px",
    }
  }
/>
`;
